# memlock

./: .coverage  .gitignore  FUTURE-ENHANCEMENTS.md  MANUAL.md  README.md  SLIDES.md  coverage.xml  project-idea.md  proposal.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scanner/: config.py  context.py  main.py  parser.py  traversal.py
scanner/findings/: __init__.py  models.py  sarif.py
scanner/reporting/: console.py  summary.py
scanner/rules/: __init__.py  base.py  buffer_overflow.py  format_string.py  hardcoded_secrets.py  integer_overflow.py  memory_management.py  null_checks.py  unsafe_functions.py  use_after_free.py
tests/: README_TESTS.md  sample.c  test_buffer_overflow.py  test_context.py  test_format_string.py  test_hardcoded_secrets.py  test_integer_overflow.py  test_memory_management.py  test_null_checks.py  test_parser.py  test_traversal.py  test_unsafe_functions.py  test_use_after_free.py
tests/safe/: .gitkeep  buffer_overflow_safe.c  easy_bounded_alloc_safe.c  easy_env_var_safe.c  easy_fgets_safe.c  easy_format_literal_safe.c  easy_null_check_safe.c  easy_strncpy_safe.c  format_string_safe.c  hard_complex_flow_safe.c  hard_enterprise_safe.c  hard_macro_safe.c  hardcoded_secrets_safe.c  integer_overflow_safe.c  medium_checked_wrappers_safe.c  medium_error_handling_safe.c  medium_loop_bounds_safe.c  medium_scanf_bounded_safe.c  medium_snprintf_safe.c  memory_management_safe.c  mixed_safe.c  null_checks_safe.c  unsafe_functions_safe.c  use_after_free_safe.c
tests/vulnerable/: .gitkeep  easy_gets_unsafe.c  (+24 more)
