[project]
name = "memlock"
version = "0.1.0"
description = "C static security analysis tool"
requires-python = ">=3.9"
readme = "README.md"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
# E402: Module level import not at top of file.
# PEP 8 allows module docstrings before imports; ruff flags this.
ignore = ["E402"]
